# jdrpv3

./: .env  .gitignore  Cargo.toml  README.md  errorCode.yml
docker/: compose.yaml
migrations/: U1__user.sql  U2__game.sql  U3__player.sql
src/: claim.rs  main.rs
src/configuration/: settings.rs
src/generator/: cst.rs
src/repository/: manage.rs  mod.rs  pool.rs
src/routes/: error.rs  get.rs  mod.rs  post.rs
src/security/: password_manager.rs
src/ws/: mod.rs  ws.rs  ws_helper.rs
static/: .env  package.json
static/public/: index.html
static/src/: App.css  App.jsx  index.js
static/src/components/: loginButton.jsx
static/src/components/ApiCrawler/: get.jsx  post.jsx
static/src/components/UI/: darkmode.jsx  loader.jsx  pagination.jsx  toasterAlert.jsx  websocketsatuts.jsx
static/src/components/game/jdrp/: cs.jsx
static/src/components/game/jdrp/Ui/: AdminStatsCard.jsx  StatsCard.jsx  map.jsx
static/src/components/security/: cookies.js  navright.jsx
static/src/data/jdrp/: character_creation_rules.json  classes.json  races.json  stats.json
static/src/pages/: about.jsx  accountcreation.jsx  home.jsx  login.jsx
static/src/pages/private/: account.jsx  creategame.jsx  createplayer.jsx  game.jsx  loby.jsx  pageapp.jsx  sharegame.jsx
static/src/pages/private/game/: adminView.jsx  diceRoll.jsx  userViem.jsx  userstats.jsx
static/src/styles/: loader.css  navigation_right.css  notifications.css  sliders.css  tabs.css  toast.css  userview.css  ws_panel.css
