[package]
name = "jdrpv3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-web-httpauth = "0.5.1"
actix-web-grants = "2.2.0"
jsonwebtoken = "7.2.0"
serde = "1.0.130"
serde_json = "1.0.71"
log = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.17"
chrono = "0.4.15"