[package]
name = "jdrpv3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-web-httpauth = "0.5.1"
actix-web-grants = "2.2.0"
actix-cors = "0.5.4"
jsonwebtoken = "7.2.0"
serde = "1.0.130"
serde_json = "1.0.71"
log = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.17"
chrono = "0.4.15"
# refinery = { version = "0.7.0", features = ["mysql"]}
mysql = "21.0.2"
argon2 = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
uuid = {version = "0.8.2", features= ["v4"]}
config = "0.11.0"
derive_more = "0.99.17"